--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="js/lib.js"></script>
-  <script src="js/app.js"></script>
+  <script src="dist/app.js"></script>
   <script>$(main)</script>
 </head>
 
