--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>!!!Pattern!!!</title>
+  <title>Neigbourhood Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="js/lib.js"></script>
-  <script src="dist/app.js"></script>
-  <script>$(main)</script>
+  <script src="js/app.js"></script>
 </head>
 
 <body>
