--- a/index.html
+++ b/index.html
@@ -7,56 +7,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <section>
-        <h1>Here goes the columns</h1>
-        <div class="col-sm-4">
-          <p>Column 1 of 3</p>
-        </div>
-        <div class="col-sm-4">
-          <p>Column 2 of 3</p>
-        </div>
-        <div class="col-sm-4">
-          <p>Column 3 of 3</p>
-        </div>
-      </section>
+
+<!--Header-->
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cust-navbar-collapse"
+              aria-expanded="false">
+        <span class="sr-only"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand">Neighbourhood Map</a>
     </div>
-    <div class="row">
-      <section>
-        <h1>Here goes the button</h1>
-        <div class="col-sm-12">
-          <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">
-            Launch modal
-          </button>
+
+    <div class="collapse navbar-collapse" id="cust-navbar-collapse">
+      <form class="navbar-form navbar-left">
+        <div class="input-group">
+          <span class="input-group-addon" id="cust-addon-filter">Filter the list:</span>
+          <input type="text" class="form-control" placeholder="e.g. Cafe" id="cust-input-filter"
+                 aria-describedby="cust-addon-filter">
         </div>
-      </section>
+      </form>
     </div>
   </div>
+</nav>
 
-  <div class="modal fade" id = "myModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          <p>One fine body&hellip;</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+<!--Body-->
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-4">
+      <div class="list-group">
+        <a href="#" class="list-group-item active">Active Item</a>
+        <a href="#" class="list-group-item">Inactive Item</a>
       </div>
     </div>
+    <div class="col-xs-8">
+    </div>
   </div>
-
-  <script src="js/bootstrap.min.js"></script>
+</div>
 </body>
 
 </html>
