feat: load google map

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOPYXNAFOVDoakdOLtdqpI71E3erG-RkQ&v=3&callback=init" onerror="mapError()"></script>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/knockout-3.4.2.js"></script>
+  <script src="dist/app.js"></script>
 </head>
 
 <body>
