--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOPYXNAFOVDoakdOLtdqpI71E3erG-RkQ&callback=init&v=3"
-          onerror="mapError()"></script>
+
+  <!--
+
+            onerror="mapError()"></script>
+
+  -->
+
+
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOPYXNAFOVDoakdOLtdqpI71E3erG!!!-RkQ&callback=init&v=3" onerror="mapError()"></script>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/knockout-3.4.2.js"></script>
@@ -48,7 +54,7 @@
 
 <!--Body-->
 
-<div class="container-fluid">
+<div class="container-fluid map-container">
   <div class="row">
     <div class="col-xs-12">
       <div class="alert alert-danger alert-dismissable" role="alert" data-bind="visible: alertVisible">
@@ -58,14 +64,15 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row map-container">
     <div class="col-xs-4">
       <div class="list-group">
         <a href="#" class="list-group-item active">Active Item</a>
         <a href="#" class="list-group-item">Inactive Item</a>
       </div>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-8 map-container">
+      <div id="map"></div>
     </div>
   </div>
 </div>
