--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-
-  <!--
-
-            onerror="mapError()"></script>
-
-  -->
-
-
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOPYXNAFOVDoakdOLtdqpI71E3erG!!!-RkQ&callback=init&v=3" onerror="mapError()"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOPYXNAFOVDoakdOLtdqpI71E3erG-RkQ&callback=init&libraries=places&v=3" onerror="mapError()"></script>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/knockout-3.4.2.js"></script>
@@ -44,7 +36,7 @@
       <form class="navbar-form navbar-left">
         <div class="input-group">
           <span class="input-group-addon" id="cust-addon-filter">Filter the list:</span>
-          <input type="text" class="form-control" placeholder="e.g. Cafe" id="cust-input-filter"
+          <input type="text" class="form-control" placeholder="e.g. Pub" id="cust-input-filter"
                  aria-describedby="cust-addon-filter">
         </div>
       </form>
