--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Neigbourhood Map</title>
+  <title>Pub Crawling Guide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -23,13 +23,13 @@
 
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cust-navbar-collapse"
-              aria-expanded="false">
+              aria-expanded="false" data-bind="click: showList">
         <span class="sr-only"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">Neighbourhood Map</a>
+      <a class="navbar-brand">Pub Crawling Guide</a>
     </div>
 
     <div class="collapse navbar-collapse" id="cust-navbar-collapse">
@@ -49,7 +49,7 @@
 <div class="container-fluid map-container">
   <div class="row">
     <div class="col-xs-12">
-      <div class="alert alert-danger alert-dismissable" role="alert" data-bind="visible: alertVisible">
+      <div class="alert alert-danger alert-dismissable hidden" role="alert" data-bind="css: { hidden: !alertVisible() }">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close" data-bind="click: closeAlert"><span
             aria-hidden="true">&times;</span></button>
         <p><strong>Error! </strong><span data-bind="text: alertText"></span></p>
@@ -57,12 +57,12 @@
     </div>
   </div>
   <div class="row map-container">
-    <div class="col-xs-4 no-margin list" data-bind="visible: searchVisible">
+    <div class="col-xs-3 no-margin list" data-bind="visible: searchVisible">
       <div class="list-group" data-bind="foreach: locations">
         <a href="#" class="list-group-item" data-bind="text: name"></a>
       </div>
     </div>
-    <div class="col-xs-8 map-container no-margin">
+    <div class="col-xs-9 map-container no-margin map">
       <div id="map"></div>
     </div>
   </div>
