feat: add list filtering

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <form class="navbar-form navbar-left">
         <div class="input-group" data-bind="visible: searchVisible">
           <span class="input-group-addon" id="cust-addon-filter">Filter the list:</span>
-          <input type="text" class="form-control" placeholder="e.g. Pub" id="cust-input-filter"
-                 aria-describedby="cust-addon-filter">
+          <input type="text" class="form-control" placeholder="e.g. pub" id="cust-input-filter"
+                 aria-describedby="cust-addon-filter" data-bind="textInput: searchString">
         </div>
       </form>
     </div>
@@ -59,7 +59,7 @@
   <div class="row map-container">
     <div class="col-xs-3 no-margin list" data-bind="visible: searchVisible">
       <div class="list-group" data-bind="foreach: locations">
-        <a href="#" class="list-group-item" data-bind="text: name"></a>
+        <a href="#" class="list-group-item" data-bind="text: name, visible: visible"></a>
       </div>
     </div>
     <div class="col-xs-9 map-container no-margin map">
