feat: add infoWindow

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 <div class="container-fluid map-container">
   <div class="row">
     <div class="col-xs-12">
-      <div class="alert alert-danger alert-dismissable hidden" role="alert" data-bind="css: { hidden: !alertVisible() }">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close" data-bind="click: closeAlert"><span
-            aria-hidden="true">&times;</span></button>
+        <div class="alert alert-danger hidden" role="alert"  data-bind="css: { hidden: !alertVisible() }">
         <p><strong>Error! </strong><span data-bind="text: alertText"></span></p>
       </div>
     </div>
