feat: add trip planning

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <span class="input-group-addon" id="cust-addon-filter">Filter the list:</span>
           <input type="text" class="form-control" placeholder="e.g. pub" id="cust-input-filter"
                  aria-describedby="cust-addon-filter" data-bind="textInput: searchString">
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default btn" data-bind="click: clickRoute">Plan your trip</button>
+          </span>
         </div>
       </form>
     </div>
