--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/knockout-3.4.2.js"></script>
-  <script src="js/app.js"></script>
+  <script src="dist/app.js"></script>
 </head>
 
 <body>
