docs: add comments to code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<!--suppress ALL, UnterminatedStatementJS, SyntaxError -->
 <html>
 
+<!--suppress UnterminatedStatementJS, UnterminatedStatementJS, UnterminatedStatementJS -->
 <head>
   <meta charset="utf-8">
   <title>Pub Crawling Guide</title>
@@ -11,7 +13,7 @@
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/knockout-3.4.2.js"></script>
-  <script src="js/app.js"></script>
+  <script src="dist/app.js"></script>
 </head>
 
 <body>
