fix: show author

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <img id="info-img" class="img-responsive center-block img-rounded" alt="Venue's Photo" data-bind="attr: { src: venuePhoto }">
   </div>
   <div class="panel-footer text-right">
-    <p>the photo was posted by <span data-bind="photoAuthor"></span></p>
+    <p>the photo was posted by <span data-bind="text: photoAuthor"></span></p>
     <p>on <a href="https://foursquare.com" target="_blank">foursquare</a></p>
   </div>
 </div>
